Resolved merge conflicts and updated App.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app" ,
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +10,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-<<<<<<< HEAD
-=======
     "react-modal": "^3.16.1",
->>>>>>> e01a430b9d2e4d2377f7661ad9c8c400f790ca01
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
@@ -21,9 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
- 
-    "start": "react-scripts start"
-    ,
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
